# coro_clone

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: CompileOptionsSupport.cmake  Filepath.cmake  Init.cmake  InitSubmodule.cmake  Logging.cmake  RequireLTO.cmake  Sanitizers.cmake  SetupLTO.cmake  default.defines.cmake
include/coro/: task.hpp  thread_pool.hpp
include/coro/concepts/: awaitable.hpp  range_of.hpp
include/coro/detail/: task_self_deleting.hpp
src/: main.cpp  thread_pool.cpp
src/detail/: task_self_deleting.cpp
tests/: CMakeLists.txt  test_task.cpp
